@@ -116,6 +116,7 @@ Please upgrade wxWidgets to %d.%d.%d or higher.''' % MinWxVersion)
         conf.pos = wx.Point(conf.ReadInt('x', -1), conf.ReadInt('y', -1))
         conf.size = wx.Size(conf.ReadInt('width', 800), conf.ReadInt('height', 600))
         g.useAUI = conf.useAUI = conf.ReadBool('useAUI', False)
+        conf.toolPanelType = conf.Read('toolPanelType', 'TB')
         conf.embedPanel = conf.ReadBool('embedPanel', True)
         conf.panelPinState = conf.ReadBool('panelPinState', False)
         conf.showToolPanel = conf.ReadBool('showToolPanel', True)
@@ -168,6 +169,7 @@ Please upgrade wxWidgets to %d.%d.%d or higher.''' % MinWxVersion)
         conf.WriteInt('embedPanel', conf.embedPanel)
         conf.WriteInt('panelPinState', conf.panelPinState)
         conf.WriteInt('showTools', conf.showToolPanel)
+        conf.Write('toolPanelType', conf.toolPanelType)
         if not conf.embedPanel:
             conf.WriteInt('panelX', conf.panelPos.x)
             conf.WriteInt('panelY', conf.panelPos.y)
